[package]
name = "draw_frame_square_perspective"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
glutils = { path = "../glutils" }
linear_transform = { path = "../linear_transform" }
graphic_math     = { path = "../graphic_math" }