[package]
name = "egui_glfw_gl"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.43.0"
egui = "0.13.1"

[dependencies.clipboard]
package = "cli-clipboard"
version = "0.2"
optional = true

[features]
default = ["clipboard"]
